# arbitragelab-1.0.0

./: pyproject.toml
arbitragelab/: __init__.py
arbitragelab/codependence/: __init__.py  codependence_matrix.py  information.py
arbitragelab/cointegration_approach/: __init__.py  engle_granger.py  multi_coint.py  utils.py
arbitragelab/copula_approach/: __init__.py
arbitragelab/copula_approach/elliptical/: __init__.py  gaussian.py  student.py
arbitragelab/distance_approach/: basic_distance_approach.py  pearson_distance_approach.py
arbitragelab/hedge_ratios/: adf_optimal.py  half_life.py  linear.py
arbitragelab/other_approaches/: kalman_filter.py
arbitragelab/spread_selection/: cointegration.py
arbitragelab/stochastic_control_approach/: __init__.py  optimal_convergence.py
arbitragelab/time_series_approach/: __init__.py  regime_switching_arbitrage_rule.py
arbitragelab/trading/: __init__.py
arbitragelab/util/: __init__.py
docs/source/: index.rst
tests/: test_codependence.py  test_multi_coint.py
