[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitragelab"
version = "0.1.0"
description = "Lightweight cointegration and pairs trading toolbox extracted from Hudson & Thames ArbitrageLab."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Hudson and Thames Quantitative Research", email = "opensource@hudsonthames.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["arbitrage", "finance", "pairs-trading", "cointegration", "mean-reversion"]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "statsmodels>=0.14",
  "matplotlib>=3.9",
  "scipy>=1.11",
  "scikit-learn>=1.3.0",
  "yfinance>=0.2.37",
  "yahoo-fin>=0.8.9.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/hudson-and-thames/arbitragelab"

[tool.setuptools]
packages = ["arbitragelab"]

